Separate View2D from MainWindow

--- a/doc/0.1/meshIneBits/gui/ViewObservable.Component.html
+++ b/doc/0.1/meshIneBits/gui/ViewObservable.Component.html
@@ -103,7 +103,7 @@ var activeTableTab = "activeTableTab";
 <li>java.lang.Enum&lt;<a href="../../meshIneBits/gui/ViewObservable.Component.html" title="enum in meshIneBits.gui">ViewObservable.Component</a>&gt;</li>
 <li>
 <ul class="inheritance">
-<li>meshIneBits.gui.ViewObservable.Component</li>
+<li>meshIneBits.gui.view2d.ViewObservable.Component</li>
 </ul>
 </li>
 </ul>
