--- a/server/src/main/resources/templates/model-viewer.html
+++ b/server/src/main/resources/templates/model-viewer.html
@@ -20,7 +20,7 @@
 <body>
 <div id="stl-container"></div>
 
-<script type="module" src="threes.js">
+<script type="module" src="model_viewer.js">
 
 </script>
 </body>
